<resources>
    <string name="app_name">Chady-SubBook</string>
    <string name="add_subscription">Add</string>
    <string name="remove_subscription">Remove</string>
    <string name="set_name">Name:</string>
    <string name="set_date">YYYY-MM-DD</string>
    <string name="set_price">Price:</string>
    <string name="set_comment">Comment:</string>
    <string name="done">Done</string>
</resources>
