<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chady.subbook.NewSubActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:textColor="@android:color/background_light"
        android:gravity=""
        android:ems="10"
        android:hint="@string/set_name"
        android:maxLength = "20"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginLeft="97dp"
        android:layout_marginStart="97dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/set_date"
        android:maxLength = "10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="60dp"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="380dp"
        android:textColor="@android:color/background_light"
        android:layout_height="144dp"
        android:allowUndo="true"
        android:gravity="top"
        android:ems="10"
        android:hint="@string/set_comment"
        android:maxLength = "30"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="178dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="384dp"
        android:layout_height="59dp"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/set_price"
        android:maxLength = "30"
        android:inputType="numberDecimal"
        android:layout_below="@+id/editText2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:textColor="@android:color/background_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2"
        android:gravity="center"
        android:text="Name:"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textScaleX="1"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:text="Price($):"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_below="@+id/editText2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:id="@+id/textView4"
        android:textColor="@android:color/background_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date:"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="@string/done"
        android:background="#800020"
        android:onClick="done" />

</RelativeLayout>
